[WIP] Needs outtro work

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </div>
   <div style="background-color: #232323; width: 100%; padding: 175px 0 0; display: flex; justify-content: center; align-items: center; flex-direction: column;">
     <img style="width: 80%;" src="./assets/what-if-banner.svg" />
-    <img style="margin-top: 25px;" src="./assets/once-upon-a-time-banner.svg" />
+    <img style="margin-top: 25px; margin-bottom: 20px;" src="./assets/once-upon-a-time-banner.svg" />
   </div>
   <div style="background-color: #232323; width: 100%; overflow-x: scroll; display: flex; padding-bottom: 100px;">
     <img src="./assets/carousel-image-1.png" />
@@ -127,6 +127,39 @@
   <div style="width: 100%; display: flex; justify-content: center; align-items: center;">
     <img style="width: 100%;" src="./assets/attractive-people-banner-image.png" />
     <img style="position: absolute; width: 100%;" src="./assets/attractive-people-banner-text.svg" />
+  </div>
+  <div style="margin: 100px 0; display: flex; justify-content: center; align-items: center;">
+    <div style="width: 40%; display: flex; justify-content: center; align-items: center;">
+      <img style="width: 60%;" src="./assets/neighborhood-text.svg" />
+    </div>
+    <div style="width: 60%;">
+      <img style="width: 100%;" src="./assets/neighborhood-image.png" />
+    </div>
+  </div>
+  <div style="background-color: #EDF3E6; padding-top: 90px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+    <img style="width: 80%;" src="./assets/roquebrune-cap-martin-banner-image.png" />
+    <img style="margin: 50px 0; width: 80%;" src="./assets/roquebrune-cap-martin-banner-text.svg" />
+  </div>
+  <div style="width: 100%; display: flex; justify-content: center; margin-top: 130px;">
+    <div style="width: 40%; display: flex; justify-content: center; align-items: center;">
+      <img style="width: 60%;" src="./assets/domain-de-la-torraca-banner-text.svg">
+    </div>
+    <div style="width: 60%;">
+      <img style="width: 100%;" src="./assets/domain-de-la-torraca-banner-image.png" />
+    </div>
+  </div>
+  <div style="display: flex; margin-top: 230px;">
+    <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
+      <img style="width: 80%;" src="./assets/gare-banner-image.png" />
+    </div>
+    <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
+      <img style="width: 60%;" src="./assets/gare-banner-text.svg" />
+    </div>
+  </div>
+  <div>
+    <video id="fifth-video" muted autoplay>
+      <source src="./assets/Outro.mp4">
+    </video>
   </div>
 </body>
 </html>
