Rough draft static landing page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
   <style>
     body {
@@ -16,8 +17,13 @@
       width: 15%;
       position: absolute;
     }
+
+    html {
+      scroll-behavior: smooth;
+    }
   </style>
 </head>
+
 <body>
   <video id="first-video" muted autoplay>
     <source src="./assets/Homepage.mp4">
@@ -34,25 +40,29 @@
       <img style="width: 90%;" src="./assets/specs.svg" />
     </div>
   </div>
-  <div style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
+  <div
+    style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
     <img style="width: 55%;" src="./assets/description-banner-1-image.png" />
     <div style="display: flex; justify-content: center; align-items: center; width: 35%;">
       <img style="width: 100%; padding: 30px;" src="./assets/description-banner-1-text.svg">
     </div>
   </div>
-  <div style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
+  <div
+    style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
     <div style="display: flex; justify-content: center; align-items: center; width: 50%;">
       <img style="width: 70%;" src="./assets/description-banner-2-text.svg">
     </div>
     <img style="width: 55%;" src="./assets/description-banner-2-image.png" />
   </div>
-  <div style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
+  <div
+    style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
     <img style="width: 55%;" src="./assets/description-banner-3-image.png" />
     <div style="display: flex; justify-content: center; align-items: center; width: 40%; height: 100%;">
       <img style="width: 60%;" src="./assets/description-banner-3-text.svg">
     </div>
   </div>
-  <div style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
+  <div
+    style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
     <div style="display: flex; justify-content: center; align-items: center; width: 50%;">
       <img style="width: 60%;" src="./assets/description-banner-4-text.svg">
     </div>
@@ -68,16 +78,17 @@
   </div>
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 185px; width: 100%;">
     <div style="display: flex; justify-content: center; align-items: center; flex-direction: column; width: 50%;">
-      <img style="width: 60%;" src="./assets/vertical-description-image-1.png"/>
+      <img style="width: 60%;" src="./assets/vertical-description-image-1.png" />
       <div style="display: flex; justify-content: flex-start; width: 60%; margin-top: 50px;">
-        <img style="width: 70%;" src="./assets/vertical-description-text-1.svg"/>
+        <img style="width: 70%;" src="./assets/vertical-description-text-1.svg" />
       </div>
     </div>
-    <div style="display: flex; flex-direction: column; width: 50%; justify-content: space-between; align-items: center;">
+    <div
+      style="display: flex; flex-direction: column; width: 50%; justify-content: space-between; align-items: center;">
       <div style="width: 60%; margin-bottom: 50px;">
-        <img style="width: 70%;" src="./assets/vertical-description-text-2.svg"/>
+        <img style="width: 70%;" src="./assets/vertical-description-text-2.svg" />
       </div>
-      <img style="width: 60%;" src="./assets/vertical-description-image-2.png"/>
+      <img style="width: 60%;" src="./assets/vertical-description-image-2.png" />
     </div>
   </div>
   <div style="margin-top: 200px;">
@@ -109,7 +120,8 @@
       <img style="width: 13%;" class="quad-banner-text" src="./assets/quad-banner-outdoor-text.svg" />
     </div>
   </div>
-  <div style="background-color: #232323; width: 100%; padding: 175px 0 0; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+  <div
+    style="background-color: #232323; width: 100%; padding: 175px 0 0; display: flex; justify-content: center; align-items: center; flex-direction: column;">
     <img style="width: 80%;" src="./assets/what-if-banner.svg" />
     <img style="margin-top: 25px; margin-bottom: 20px;" src="./assets/once-upon-a-time-banner.svg" />
   </div>
@@ -136,7 +148,8 @@
       <img style="width: 100%;" src="./assets/neighborhood-image.png" />
     </div>
   </div>
-  <div style="background-color: #EDF3E6; padding-top: 90px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+  <div
+    style="background-color: #EDF3E6; padding-top: 90px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
     <img style="width: 80%;" src="./assets/roquebrune-cap-martin-banner-image.png" />
     <img style="margin: 50px 0; width: 80%;" src="./assets/roquebrune-cap-martin-banner-text.svg" />
   </div>
@@ -148,7 +161,7 @@
       <img style="width: 100%;" src="./assets/domain-de-la-torraca-banner-image.png" />
     </div>
   </div>
-  <div style="display: flex; margin-top: 230px;">
+  <div style="display: flex; margin-top: 230px; margin-bottom: 460px;">
     <div style="width: 50%; display: flex; justify-content: center; align-items: center;">
       <img style="width: 80%;" src="./assets/gare-banner-image.png" />
     </div>
@@ -156,31 +169,79 @@
       <img style="width: 60%;" src="./assets/gare-banner-text.svg" />
     </div>
   </div>
-  <div>
+  <div id="fifth-video-container" style="display: flex; justify-content: center; align-items: center; position: absolute; width: 100%; margin-top: -100px;">
     <video id="fifth-video" muted autoplay>
       <source src="./assets/Outro.mp4">
     </video>
   </div>
+  <div style="width: 100%; display: flex; justify-content: center;">
+    <img style="width: 100%;" src="./assets/villa-tamanar-cartoon.png" />
+    <img id="escape-noise-text" style="width: 20%; position: absolute; margin-top: 50px;" src="./assets/villa-tamanar-escape-noise-text.svg" />
+  </div>
+  <div style="background-color: #232323; height: 200px; display: flex; justify-content: space-around; flex-direction: column; align-items: center; padding: 15px 0;">
+    <img style="width: 20%;" src="./assets/villa-tamanar-logo.svg" />
+    <img id="back-to-top" style="width: 7%; cursor: pointer;" src="./assets/back-to-top.svg" />
+    <img style="width: 10%;" src="./assets/copyright.svg" />
+  </div>
 </body>
+
 </html>
 
 <script>
   const videoTags = ['first-video', 'third-video', 'fourth-video'];
   const specialVideoTagWidth = 'second-video'
+  const outtroVideoTagWidth = 'fifth-video'
+  const outtroVideoTagWidthParentElement = 'fifth-video-container'
+  const backToTopElementTag = 'back-to-top'
 
+  // Second video needs a special width so that it's not the full page
   const specialVideoWidthVideoElement = document.getElementById(specialVideoTagWidth);
   const specialVideoWidth = Math.round(window.innerWidth * 0.98);
   specialVideoWidthVideoElement.setAttribute('width', specialVideoWidth)
 
+  // Outtro video needs a special width so that it's not the full page
+  const outtroVideoTagWidthElement = document.getElementById(outtroVideoTagWidth)
+  const outtroVideoWidth = Math.round(window.innerWidth * 0.40);
+  outtroVideoTagWidthElement.setAttribute('width', outtroVideoWidth)
+
+  // Outtro video needs to straddle two elements and needs a negative margin.  Need to calculate
+  // the margin after the page and the video are loaded so that we know the exact video dimensions.
+  outtroVideoTagWidthElement.addEventListener('canplay', () => {
+    const fifthVideoContainerElement = document.getElementById(outtroVideoTagWidth)
+    const fifthVideoContainerElementMargin = Math.round(outtroVideoTagWidthElement.videoHeight / 4)
+    fifthVideoContainerElement.style.marginTop = `-${fifthVideoContainerElementMargin}px`
+
+    // Also need to update the text that should sit right below the video based on the dynamic amount.
+    const escapeNoiseTextElement = document.getElementById('escape-noise-text')
+    const escapeNoiseTextElementMarginTop = outtroVideoTagWidthElement.videoHeight
+    escapeNoiseTextElement.style.marginTop = `${escapeNoiseTextElementMarginTop}px`
+  })
+
+  // For all full width videos, set the widths based on the browser width
   for (let i = 0; i < videoTags.length; i++) {
     const video = document.getElementById(videoTags[i])
     video.setAttribute('width', window.innerWidth)
   }
 
-  for (let i = 0; i < [...videoTags, specialVideoTagWidth].length; i++) {
-    const video = document.getElementById(videoTags[i])
-    video.addEventListener('ended', () => {
-      video.play()
-    })
+  const combinedTagsArray = [...videoTags]
+  combinedTagsArray.push(specialVideoTagWidth)
+  combinedTagsArray.push(outtroVideoTagWidth)
+
+  combinedTagsArray.forEach((currentTag) => {
+    const video = document.getElementById(currentTag)
+    if (video) {
+      video.addEventListener('ended', () => {
+        video.play()
+      })
+    } else {
+      console.log(`Couldn't set auto replay on video element tag ${currentTag}`)
+    }
+  })
+
+  function scrollTop() {
+    window.scrollTo(0, 0)
   }
+
+  const backToTopElement = document.getElementById(backToTopElementTag)
+  backToTopElement.onclick = scrollTop
 </script>
