--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
       <img style="width: 80%;" src="./assets/what-if-banner.svg" />
       <img style="margin-top: 25px; margin-bottom: 20px;" src="./assets/once-upon-a-time-banner.svg" />
     </div>
-    <div style="background-color: #232323; width: 100%; overflow-x: scroll; display: flex; padding-bottom: 100px;">
+    <div id="carousel"
+      style="background-color: #232323; width: 100%; overflow-x: scroll; display: flex; padding-bottom: 100px;">
       <img src="./assets/carousel-image-1.png" />
       <img src="./assets/carousel-image-2.png" />
       <img src="./assets/carousel-image-3.png" />
@@ -209,6 +210,32 @@
   const outtroVideoTagWidth = 'fifth-video'
   const outtroVideoTagWidthParentElement = 'fifth-video-container'
   const backToTopElementTag = 'back-to-top'
+  const slidingElementId = 'carousel'
+  const slidingElement = document.getElementById(slidingElementId)
+  let mouseDown = false
+  let startX, scrollLeft
+
+  let startDragging = function (e) {
+    mouseDown = true;
+    startX = e.pageX - slidingElement.offsetLeft;
+    scrollLeft = slidingElement.scrollLeft;
+  };
+  let stopDragging = function (event) {
+    mouseDown = false;
+  };
+
+  slidingElement.addEventListener('mousemove', (e) => {
+    e.preventDefault();
+    if (!mouseDown) { return; }
+    const x = e.pageX - slidingElement.offsetLeft;
+    const scroll = x - startX;
+    slidingElement.scrollLeft = scrollLeft - scroll;
+  });
+
+  // Add the event listeners
+  slidingElement.addEventListener('mousedown', startDragging, false);
+  slidingElement.addEventListener('mouseup', stopDragging, false);
+  slidingElement.addEventListener('mouseleave', stopDragging, false);
 
   function performLandingPageSetup() {
     console.log(`Setting up landing page`)
