Fix horizontal page overflow issue and clipped attributes issue

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <video id="second-video" muted autoplay playsinline>
         <source src="./assets/section-2.mp4">
       </video>
-      <div style="display: flex; justify-content: flex-end; width: 100%; margin: -84px 0 0;">
+      <div style="display: flex; justify-content: flex-end; width: 100%; margin: -84px 0 0; position: relative;">
         <img style="width: 90%;" src="./assets/specs.svg" />
       </div>
     </div>
@@ -63,7 +63,7 @@
       style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
       <img style="width: 55%;" src="./assets/description-banner-1-image.png" />
       <div style="display: flex; justify-content: center; align-items: center; width: 35%;">
-        <img style="width: 100%; padding: 30px;" src="./assets/description-banner-1-text.svg">
+        <img style="width: 100%; margin: 30px;" src="./assets/description-banner-1-text.svg">
       </div>
     </div>
     <div
