--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 </head>
 
 <body>
+  <div id="rotate-screen" style="display: none; justify-content: center; align-items: center; width: 100%; height: 100%;">
+    For the best viewing experience, please rotate your screen.
+  </div>
   <div id="intro-video" style="display: flex; justify-content: center;">
-    <video id="intro-video-player" controls playsinline>
+    <video id="intro-video-player" muted autoplay playsinline>
       <source src="./assets/Intro_1.mp4" />
     </video>
     <div id="skip-intro-button"
@@ -48,7 +51,8 @@
     <div style="width: 100%; display: flex; justify-content: center; align-items: center; cursor: pointer;">
       <img src="./assets/villa-tamanar-logo.svg" />
     </div>
-    <div style="position: absolute; display: flex; justify-content: center; align-items: center; right: 5px; top: 0; cursor: pointer;">
+    <div
+      style="position: absolute; display: flex; justify-content: center; align-items: center; right: 5px; top: 0; cursor: pointer;">
       <img src="./assets/hamburger.svg" />
     </div>
   </div>
@@ -154,7 +158,8 @@
       <img style="margin-top: 25px; margin-bottom: 20px;" src="./assets/once-upon-a-time-banner.svg" />
     </div>
     <div id="carousel"
-      style="background-color: #232323; width: 100%; overflow-x: scroll; display: flex; padding-bottom: 100px;" class="hidden-scrollbar">
+      style="background-color: #232323; width: 100%; overflow-x: scroll; display: flex; padding-bottom: 100px;"
+      class="hidden-scrollbar">
       <img src="./assets/carousel-image-1.png" />
       <img src="./assets/carousel-image-2.png" />
       <img src="./assets/carousel-image-3.png" />
@@ -232,6 +237,26 @@
   const slidingElement = document.getElementById(slidingElementId)
   let mouseDown = false
   let startX, scrollLeft
+
+  document.addEventListener('DOMContentLoaded', () => {
+    console.log(`DOM content loaded!`)
+    if (isMobile() && isVertical()) {
+      showRotateMessage()
+    } else {
+      hideRotateMessage()
+    }
+  })
+
+  document.addEventListener('resize', () => {
+    console.log(`Rotation detected!`)
+    if (isMobile() && isVertical()) {
+      showRotateMessage()
+    } else {
+      hideRotateMessage()
+    }
+  })
+
+
 
   let startDragging = function (e) {
     mouseDown = true;
@@ -312,10 +337,10 @@
     navbarElement.onclick = scrollTop
   }
 
+  const landingPageElement = document.getElementById('landing-page')
   function disableIntroVideoAndEnableMainLandingPage() {
     console.log(`Disable intro video called`)
     const introVideoElement = document.getElementById('intro-video')
-    const landingPageElement = document.getElementById('landing-page')
 
     introVideoElement.style.display = 'none'
     landingPageElement.style.display = 'initial'
@@ -341,5 +366,36 @@
   }
 
   skipIntroButtonElement.style.top = `${introVideoElement.offsetHeight - 70}px`
+
+  function isMobile() {
+    const userAgent = navigator.userAgent || navigator.vendor || window.opera
+
+    // This humdinger brought to you by http://detectmobilebrowsers.com/
+    return /(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(userAgent) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(userAgent.substr(0, 4))
+  }
+
+  function isVertical() {
+    return window.innerHeight > window.innerWidth
+  }
+
+  const introVideoContainer = document.getElementById('intro-video')
+
+  let introVideoState
+  let landingPageState
+  const rotateMessageElement = document.getElementById('rotate-screen')
+  function showRotateMessage() {
+    introVideoState = introVideoContainer.style.display
+    landingPageState = landingPageElement.style.display
+
+    introVideoContainer.style.display = 'none'
+    landingPageElement.style.display = 'none'
+    rotateMessageElement.style.display = 'flex'
+  }
+
+  function hideRotateMessage() {
+    rotateMessageElement.style.display = 'none'
+    introVideoContainer.style.display = introVideoState
+    landingPageElement.style.display = landingPageState
+  }
 
 </script>
