--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <head>
   <link rel="icon" type="image/jpeg" href="./assets/favicon.jpeg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -31,11 +34,15 @@
       -ms-overflow-style: none;
       scrollbar-width: none;
     }
+
+    .special-message {
+      font-family: 'Inter', sans-serif;
+    }
   </style>
 </head>
 
 <body>
-  <div id="rotate-screen" style="display: none; justify-content: center; align-items: center; width: 100%; height: 100%;">
+  <div id="rotate-screen" class="special-message" style="display: none; justify-content: center; align-items: center; width: 80%; height: 100vh; font-size: 16px; text-align: center; margin: 0 auto;">
     For the best viewing experience, please rotate your screen.
   </div>
   <div id="intro-video" style="display: flex; justify-content: center;">
@@ -244,6 +251,7 @@
       showRotateMessage()
     } else {
       hideRotateMessage()
+      resetIntroVideoWidth()
     }
   })
 
@@ -253,6 +261,7 @@
       showRotateMessage()
     } else {
       hideRotateMessage()
+      resetIntroVideoWidth()
     }
   }
 
@@ -351,21 +360,24 @@
   // Intro video may be hiding the controls at the bottom of the page, which is confusing because the
   // video starts with a black screen.  Auto-scroll to the bottom so that the player can show its elements.
   const introVideoElement = document.getElementById('intro-video-player')
+  const skipIntroButtonElement = document.getElementById('skip-intro-button')
   introVideoElement.addEventListener('canplay', () => {
     window.scrollTo(0, introVideoElement.offsetHeight)
   })
 
-  introVideoElement.setAttribute('width', window.innerWidth)
+  function resetIntroVideoWidth() {
+    introVideoElement.setAttribute('width', window.innerWidth)
+    skipIntroButtonElement.style.top = `${introVideoElement.offsetHeight - 70}px`
+  }
+
+  resetIntroVideoWidth()
 
   introVideoElement.addEventListener('ended', disableIntroVideoAndEnableMainLandingPage)
 
-  const skipIntroButtonElement = document.getElementById('skip-intro-button')
   skipIntroButtonElement.onclick = () => {
     disableIntroVideoAndEnableMainLandingPage()
     introVideoElement.pause()
   }
-
-  skipIntroButtonElement.style.top = `${introVideoElement.offsetHeight - 70}px`
 
   function isMobile() {
     const userAgent = navigator.userAgent || navigator.vendor || window.opera
