--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
       <div id="first-video-overlay" style="background: rgba(0, 0, 0, .5); position: absolute;"></div>
       <img src="./assets/first-video-overlay.svg" style="width: 100%; position: absolute; width: 30%;" />
     </div>
-    <img style="width: 100%; margin: -5px 0 0;" src="./assets/second-image.png" />
-    <div style="display: flex; justify-content: center; align-items: center; margin: 100px 0;">
+    <img id="second-image" style="width: 100%; margin: -5px 0 0;" src="./assets/second-image.png" />
+    <div id="dimensions" style="display: flex; justify-content: center; align-items: center; margin: 100px 0;">
       <img style="width: 60%;" src="./assets/dimensions.svg" />
     </div>
-    <div style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+    <div id="second-video-parent" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
       <video id="second-video" muted autoplay playsinline>
         <source src="./assets/section-2.mp4">
       </video>
@@ -84,6 +84,7 @@
       </div>
     </div>
     <div
+      id="description-banner-1"
       style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
       <img style="width: 55%;" src="./assets/description-banner-1-image.png" />
       <div style="display: flex; justify-content: center; align-items: center; width: 35%;">
@@ -91,6 +92,7 @@
       </div>
     </div>
     <div
+      id="description-banner-2"
       style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
       <div style="display: flex; justify-content: center; align-items: center; width: 50%;">
         <img style="width: 70%;" src="./assets/description-banner-2-text.svg">
@@ -249,6 +251,8 @@
   let mouseDown = false
   let startX, scrollLeft
 
+  let chromeMobileWidthBugDetected = false
+
   // If we're on mobile and we're vertical, show a message that they need to rotate
   document.addEventListener('DOMContentLoaded', () => {
     if (isMobile() && isVertical()) {
@@ -267,6 +271,12 @@
     } else {
       hideRotateMessage()
       resetIntroVideoWidth()
+    }
+
+    checkForChromeMobileWidthBug()
+
+    if (isLandingPageElementVisible()) {
+      performLandingPageSetup()
     }
   }
 
@@ -360,6 +370,8 @@
     const navbarElement = document.getElementById(navbarId)
     navbarElement.style.display = 'flex'
     navbarElement.onclick = scrollTop
+
+    checkForChromeMobileWidthBug()
   }
 
   const landingPageElement = document.getElementById('landing-page')
@@ -425,6 +437,34 @@
     rotateMessageElement.style.display = 'none'
     introVideoContainer.style.display = introVideoState
     landingPageElement.style.display = landingPageState
+  }
+
+  function isLandingPageElementVisible() {
+    return landingPageElement.style.display !== 'none'
+  }
+
+  // For some reason on Chrome Mobile views, elements set to "width: 100%;" are not fitting to the full width.
+  // Hack to fix this is to specify which elements aren't resizing properly and forcing them to be the width of
+  // the page.
+  function checkForChromeMobileWidthBug() {
+    const parentVideoElement = document.getElementById('first-video-parent')
+    console.log(`Chrome width bug detected!`)
+    if (chromeMobileWidthBugDetected || isLandingPageElementVisible() && window.innerWidth !== parentVideoElement.offsetWidth) {
+      chromeMobileWidthBugDetected = true
+      const landingPageElement = document.getElementById('landing-page')
+
+      // Basically all root elements within the landing page element need to be dynamically set
+      const landingPageChildren = landingPageElement.children
+
+      for (let i = 0; i < landingPageChildren.length; ++i) {
+        const child = landingPageChildren[i]
+        child.style.width = `${window.innerWidth}px`
+      }
+
+      // Special case where we need an overlay to be dynamically set as well
+      const firstVideoOverlay = document.getElementById('first-video-overlay')
+      firstVideoOverlay.style.width = `${window.innerWidth}px`
+    }
   }
 
 </script>
