--- a/index.html
+++ b/index.html
@@ -38,14 +38,88 @@
     .special-message {
       font-family: 'Inter', sans-serif;
     }
+
+    /* Loading spinner CSS */
+    .lds-ellipsis {
+      display: inline-block;
+      position: absolute;
+      min-width: 80px;
+      min-height: 80px;
+      width: 80px;
+      height: 80px;
+    }
+
+    .lds-ellipsis div {
+      position: absolute;
+      top: 33px;
+      width: 13px;
+      height: 13px;
+      border-radius: 50%;
+      background: #fff;
+      animation-timing-function: cubic-bezier(0, 1, 1, 0);
+    }
+
+    .lds-ellipsis div:nth-child(1) {
+      left: 8px;
+      animation: lds-ellipsis1 0.6s infinite;
+    }
+
+    .lds-ellipsis div:nth-child(2) {
+      left: 8px;
+      animation: lds-ellipsis2 0.6s infinite;
+    }
+
+    .lds-ellipsis div:nth-child(3) {
+      left: 32px;
+      animation: lds-ellipsis2 0.6s infinite;
+    }
+
+    .lds-ellipsis div:nth-child(4) {
+      left: 56px;
+      animation: lds-ellipsis3 0.6s infinite;
+    }
+
+    @keyframes lds-ellipsis1 {
+      0% {
+        transform: scale(0);
+      }
+
+      100% {
+        transform: scale(1);
+      }
+    }
+
+    @keyframes lds-ellipsis3 {
+      0% {
+        transform: scale(1);
+      }
+
+      100% {
+        transform: scale(0);
+      }
+    }
+
+    @keyframes lds-ellipsis2 {
+      0% {
+        transform: translate(0, 0);
+      }
+
+      100% {
+        transform: translate(24px, 0);
+      }
+    }
+
+    /* End loading spinner CSS */
   </style>
 </head>
 
 <body>
-  <div id="rotate-screen" class="special-message" style="display: none; justify-content: center; align-items: center; width: 80%; height: 100vh; font-size: 20px; text-align: center; margin: 0 auto;">
-    Best viewed on desktop or tablet.  If viewing on mobile, please rotate device and refresh.
+  <div id="rotate-screen" class="special-message"
+    style="display: none; justify-content: center; align-items: center; width: 80%; height: 100vh; font-size: 40px; text-align: center; margin: 0 auto;">
+    Best viewed on desktop or tablet. If viewing on mobile, please rotate device and refresh.
   </div>
-  <div id="intro-video" style="display: flex; justify-content: center;">
+  <div id="intro-video" style="display: flex; justify-content: center; align-items: center;">
+    <div id="loading-spinner" class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
     <video id="intro-video-player" muted autoplay playsinline>
       <source src="./assets/Intro_1.mp4" />
     </video>
@@ -75,7 +149,8 @@
     <div id="dimensions" style="display: flex; justify-content: center; align-items: center; margin: 100px 0;">
       <img style="width: 60%;" src="./assets/dimensions.svg" />
     </div>
-    <div id="second-video-parent" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
+    <div id="second-video-parent"
+      style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
       <video id="second-video" muted autoplay playsinline>
         <source src="./assets/section-2.mp4">
       </video>
@@ -83,16 +158,14 @@
         <img style="width: 90%;" src="./assets/specs.svg" />
       </div>
     </div>
-    <div
-      id="description-banner-1"
+    <div id="description-banner-1"
       style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
       <img style="width: 55%;" src="./assets/description-banner-1-image.png" />
       <div style="display: flex; justify-content: center; align-items: center; width: 35%;">
         <img style="width: 100%; margin: 30px;" src="./assets/description-banner-1-text.svg">
       </div>
     </div>
-    <div
-      id="description-banner-2"
+    <div id="description-banner-2"
       style="margin-top: 140px; width: 100%; display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
       <div style="display: flex; justify-content: center; align-items: center; width: 50%;">
         <img style="width: 70%;" src="./assets/description-banner-2-text.svg">
@@ -391,6 +464,12 @@
   const skipIntroButtonElement = document.getElementById('skip-intro-button')
   introVideoElement.addEventListener('canplay', () => {
     window.scrollTo(0, introVideoElement.offsetHeight)
+
+    const loadingSpinner = document.getElementById('loading-spinner')
+
+    setTimeout(() => {
+      loadingSpinner.style.display = 'none'
+    }, 3500)
   })
 
   // Reset intro video width as part of setup, or as part of a screen rotation
@@ -441,6 +520,10 @@
 
   function isLandingPageElementVisible() {
     return landingPageElement.style.display !== 'none'
+  }
+
+  function isIntroVideoVisible() {
+    return introVideoContainer.style.display !== 'none'
   }
 
   // For some reason on Chrome Mobile views, elements set to "width: 100%;" are not fitting to the full width after rotation.
